# otel-elastic-endpoint

./: .env.example  CLAUDE.md  README.md  about-this-template.md  product-requirement-prompts.md  pyproject.toml
src/: __init__.py  app.py
src/templates/: index.html
